--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,10 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Build
-        run: docker-compose up -d
-      - name: Lint
-        run: docker-compose exec -T goldify yarn lint
-      - name: Test
-        run: docker-compose exec -T goldify yarn test
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: "15"
+      - run: yarn install
+      - run: yarn lint
+      - run: yarn test
