--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,5 +11,6 @@ jobs:
         with:
           node-version: "15"
       - run: yarn install
+      - run: yarn start
       - run: yarn lint
       - run: yarn test
