--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
       - run: yarn lint
       - run: yarn test
         env:
-          REACT_APP_SPOTIFY_CLIENT_ID: ${{ secrets.REACT_APP_SPOTIFY_CLIENT_ID }}
-          REACT_APP_SPOTIFY_CLIENT_SECRET: ${{ secrets.REACT_APP_SPOTIFY_CLIENT_SECRET }}
+          REACT_APP_SPOTIFY_CLIENT_ID: "TEST_REACT_APP_SPOTIFY_CLIENT_ID"
+          REACT_APP_SPOTIFY_CLIENT_SECRET: "TEST_REACT_APP_SPOTIFY_CLIENT_SECRET"
           REACT_APP_SPOTIFY_REDIRECT_URI: "http://localhost:3000/goldify"
