--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.3",
     "react-sortable-hoc": "^1.11.0",
     "web-vitals": "^0.2.4"
   },
