Update /goldify to /solo to reflect Solo feature

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
         env:
           REACT_APP_SPOTIFY_CLIENT_ID: "TEST_REACT_APP_SPOTIFY_CLIENT_ID"
           REACT_APP_SPOTIFY_CLIENT_SECRET: "TEST_REACT_APP_SPOTIFY_CLIENT_SECRET"
-          REACT_APP_SPOTIFY_REDIRECT_URI: "http://localhost:3000/goldify"
+          REACT_APP_SPOTIFY_REDIRECT_URI: "http://localhost:3000/solo"
