--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "ansi-regex": "^5.0.1",
     "array-move": "^3.0.1",
     "axios": "^0.21.2",
+    "ejs": "^3.1.7",
+    "json-schema": "^0.4.0",
+    "node-forge": "^1.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.3",
     "react-sortable-hoc": "^1.11.0",
+    "shell-quote": "^1.7.3",
+    "simple-git": "^3.5.0",
+    "terser": "^5.14.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
