--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-sortable-hoc": "^1.11.0",
     "shell-quote": "^1.7.3",
     "simple-git": "^3.16.0",
@@ -59,5 +59,8 @@
     "eslint-plugin-react": "^7.21.5",
     "lint": "^0.7.0",
     "prettier": "2.2.1"
+  },
+  "engines": {
+    "yarn": "1.22.19"
   }
 }
