--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "^5.0.1",
     "react-sortable-hoc": "^1.11.0",
+    "request": "^2.88.2",
     "shell-quote": "^1.7.3",
-    "simple-git": "^3.16.0",
+    "simple-git": "^3.19.0",
     "terser": "^5.14.2",
     "web-vitals": "^0.2.4"
   },
@@ -57,7 +58,7 @@
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
-    "lint": "^0.7.0",
+    "lint": "^0.8.19",
     "prettier": "2.2.1"
   },
   "engines": {
