--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "ejs": "^3.1.7",
     "json-schema": "^0.4.0",
     "node-forge": "^1.3.0",
+    "nth-check": "^2.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "^5.0.1",
     "react-sortable-hoc": "^1.11.0",
-    "request": "^2.88.2",
     "shell-quote": "^1.7.3",
     "simple-git": "^3.19.0",
     "terser": "^5.14.2",
